--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-mass-autocomplete": "~0.2.3",
     "angular-loading-bar": "~0.7.1",
     "angular-modal-service": "~0.6.6",
-    "ngInfiniteScroll": "~1.2.0"
+    "ngInfiniteScroll": "~1.2.0",
+    "array-util": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
