--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "albasimchWww",
   "version": "0.0.0",
   "dependencies": {
+    "chance": "^0.7.4",
     "proxy-middleware": "^0.11.0",
     "yargs": "^3.5.4"
   },
